# Seedream-Image-Generate-ComfyUI

./: .gitignore  README.md  __init__.py  pyproject.toml  requirements.txt  seedance2_nodes.py  seedream_node.py  setup_guide.md  test_api_key.py  validate_api_key.py
.github/workflows/: publish.yml
docs/: images-guide.md
images/: README.md
util/: routes.py  seedance2_video_upload.js
web/: seedream_resolution.js
