[project]
name = "seedream-image-generate-comfyui"
description = "A ComfyUI custom node based on the Volcano Engine Doubao large model Seedream API, designed for high-quality image generation."
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["volcengine-python-sdk[ark]>=1.0.0", "requests>=2.25.0", "Pillow>=8.0.0", "torch>=1.9.0", "numpy>=1.20.0"]

[project.urls]
Repository = "https://github.com/dzy1128/Seedream-Image-Generate-ComfyUI"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/dzy1128/Seedream-Image-Generate-ComfyUI/wiki"
"Bug Tracker" = "https://github.com/dzy1128/Seedream-Image-Generate-ComfyUI/issues"

[tool.comfy]
PublisherId = ""
DisplayName = "Seedream-Image-Generate-ComfyUI"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

